2002-02-11  Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Stops the grabber when receiving a call.
	
	* src/endpoint.cpp: Added extensive use of gnomemeeting_threads_enter.

	* src/gdkvideoio.cpp: Added extensive use of gnomemeeting_threads_enter.
	
	* src/gnomemeeting.cpp: Bug fixes.
	
	* src/misc.cpp: Removed unuseful comments.
	
	* src/videograbber.cpp: Added function with mutexes (which is probably
	unuseful).

2002-02-11  Christian Rose  <menthos@menthos.com>

	* src/callbacks.cpp: Changed copyright reference.

2002-02-11  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "de" to ALL_LINGUAS.
	* src/misc.cpp: Added a missing include statement.

2002-02-11  Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp: Added unpause channels in the button callback.
	
2002-02-11  Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: The connect callbacks now call the Connect/
	Disconnect stuff.

	* src/toolbar.cpp: Added a function to update the connect button
	contents.

	* src/endpoint.cpp: Use that function here above to update the connect
	button.
	
2002-02-11  Damien Sandras  <dsandras@seconix.com>

	* src/cleaner.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter.

	* src/connection.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter.

	* src/endpoint.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter.

	* src/gatekeeper.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter. Added check to not add an empty alias.

	* src/ils.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter.

	* src/misc.cpp: Added gnomemeeting_threads_enter/leave.

	* src/misc.h: Added gnomemeeting_threads_enter/leave.

	* src/videograbber.cpp: Changed the use of gdk_threads_enter to
	gnomemeeting_threads_enter.

	
2002-02-10  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/gatekeeper.cpp: AddAliasNames fixes.
	