@@ -1,5 +1,15 @@
 2002-02-11  Damien Sandras  <dsandras@seconix.com>
 
+	* src/endpoint.cpp: Removed unuseful comment.
+
+	* src/ldap_window.cpp: Added change from Alp Toker <alp@atoker.com>
+
+	* src/e-splash.cpp: Added change from Alp Toker <alp@atoker.com>
+
+	* src/chat_window.cpp: Added #include "../config.h" in the right place.
+	
+2002-02-11  Damien Sandras  <dsandras@seconix.com>
+
 	* src/connection.cpp: Stops the grabber when receiving a call.
 	
 	* src/endpoint.cpp: Added extensive use of gnomemeeting_threads_enter.
